--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,61 +8,28 @@ on:
 
 jobs:
   laravel-tests:
+
     runs-on: ubuntu-latest
-    services:
-      mysql:
-        image: mysql:8.0
-        ports:
-          - 3306:3306
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: test_db
-          MYSQL_USER: laravel
-          MYSQL_PASSWORD: secret
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
 
     steps:
-    - uses: actions/checkout@v4
-
-    - uses: shivammathur/setup-php@v2
+    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.2'
-        extensions: mbstring, bcmath, pdo_mysql
-
+    - uses: actions/checkout@v4
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-
     - name: Generate key
       run: php artisan key:generate
-
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-
-    - name: Esperar a que MySQL esté listo
+    - name: Create Database
       run: |
-        for i in {1..10}; do 
-          nc -z 127.0.0.1 3306 && echo "MySQL está listo!" && break
-          echo "Esperando MySQL..."
-          sleep 3
-        done
-
-    - name: Run migrations
-      run: php artisan migrate --force
-
-    - name: Execute tests
+        mkdir -p database
+        touch database/restaurant_directory.sql
+    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: test_db
-        DB_USERNAME: laravel
-        DB_PASSWORD: secret
+        DB_DATABASE: database/restaurant_directory.sql
       run: php artisan test
-
