--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,19 +5,23 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+ 
 jobs:
   laravel-tests:
-
+ 
     runs-on: ubuntu-latest
-
+ 
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
-        php-version: '8.2'
+        php-version: '8.3.1'
     - uses: actions/checkout@v4
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Install Composer
+      run: curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
+    - name: Composer update
+      run: composer update
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
@@ -27,9 +31,9 @@ jobs:
     - name: Create Database
       run: |
         mkdir -p database
-        touch database/restaurant_directory.sql
+        touch database/database.sql
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: mysql
-        DB_DATABASE: database/restaurant_directory.sql
+        DB_DATABASE: database/database.sql
       run: php artisan test
