--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel CI (SQLite)
+name: Laravel CI (MySQL)
 
 on:
   push:          { branches: [main] }
@@ -8,37 +8,62 @@ jobs:
   tests:
     runs-on: ubuntu-latest
 
-    steps:
-    # 1) Clonar el código
-    - uses: actions/checkout@v4                        # GitHub Actions oficial :contentReference[oaicite:1]{index=1}
+    # ────────────────────────────────
+    # 1) Servicio MySQL 8
+    # ────────────────────────────────
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: ci_test
+          MYSQL_USER: laravel
+          MYSQL_PASSWORD: secret
+        ports: [3306:3306]
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3   # espera a que el contenedor esté “healthy”
 
-    # 2) Configurar PHP 8.2 con SQLite
-    - uses: shivammathur/setup-php@v2                 # Acción recomendada por Laravel News :contentReference[oaicite:2]{index=2}
+    # Variables disponibles en todos los pasos
+    env:
+      APP_ENV: testing
+      DB_CONNECTION: mysql
+      DB_HOST: 127.0.0.1
+      DB_PORT: 3306
+      DB_DATABASE: ci_test
+      DB_USERNAME: laravel
+      DB_PASSWORD: secret
+
+    steps:
+    # 2) Código fuente
+    - uses: actions/checkout@v4                                         # :contentReference[oaicite:0]{index=0}
+
+    # 3) PHP 8.2 + extensiones
+    - uses: shivammathur/setup-php@v2                                   
       with:
         php-version: '8.2'
-        extensions: pdo, php-mysql, mysql-server
+        extensions: mbstring, bcmath, pdo_mysql                         # :contentReference[oaicite:1]{index=1}
 
-    # 3) Instalar dependencias
-    - name: Install Composer dependencies
-      run: composer install --prefer-dist --no-interaction --no-progress   # Patrón del starter-workflow :contentReference[oaicite:3]{index=3}
+    # 4) Dependencias Composer
+    - name: Instalar dependencias
+      run: composer install --prefer-dist --no-interaction --no-progress  # :contentReference[oaicite:2]{index=2}
 
-    # 4) Preparar el entorno
-    - name: Copy .env
-      run: cp .env.example .env
-    - name: Generate APP_KEY
-      run: php artisan key:generate                                        # Paso típico en docs y tutos :contentReference[oaicite:4]{index=4}
+    # 5) Preparar entorno
+    - run: cp .env.example .env
+    - run: php artisan key:generate                                      # :contentReference[oaicite:3]{index=3}
 
-    # 5) Crear la BD SQLite y migrar
-    - name: Prepare database
+    # 6) Esperar a MySQL (por si el health‑check tarda)
+    - name: Esperar MySQL
       run: |
-        mkdir -p database
-        touch database/database.sql      # truco clásico para SQLite en CI :contentReference[oaicite:5]{index=5}
-        php artisan migrate --seed --no-interaction
+        until mysql -h 127.0.0.1 -ularavel -psecret -e "SELECT 1"; do
+          sleep 1
+        done                                                             # :contentReference[oaicite:4]{index=4}
 
-    # 6) Ejecutar la suite de tests
-    - name: Run PHPUnit tests
-      env:
-        DB_CONNECTION: mysql                # Forzar conexión testing
-        DB_DATABASE: database/database.sql
-      run: php artisan test                  # Sin --parallel → no necesita ParaTest
+    # 7) Migraciones + seeders
+    - run: php artisan migrate --seed --no-interaction                   # :contentReference[oaicite:5]{index=5}
 
+    # 8) Tests (sin --parallel ⇒ no necesita ParaTest)
+    - name: Ejecutar tests
+      run: php artisan test
